Adding WebConfig file to allow Frontend URl to access api to bypass the CORS issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,8 @@ spring.ecom.app.jwtCookieName=springBootEcom
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.springframework.security=DEBUG
 #logging.level.com.ecommerce.project=DEBUG
+
+# Needed if we are Using Elastic BeanStalk
+#server.port=5000
+
+frontend.url=http://localhost:5173/
