--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,4 @@ spring.ecom.app.jwtCookieName=springBootEcom
 #server.port=5000
 
 frontend.url=http://localhost:5173/
+image.base.url=http://localhost:8080/images/
