--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,6 @@ spring.ecom.app.jwtCookieName=springBootEcom
 
 frontend.url=http://localhost:5173/
 image.base.url=http://localhost:8080/images/
+
+#STRIPE KEY
+stripe.secret.key=${STRIPE_SECRET_KEY}
